--- a/hw1.html
+++ b/hw1.html
@@ -6,28 +6,65 @@
 * {
   box-sizing: border-box;
 }
-.menu {
-  float:left;
-  width:30%;
-  text-align:center;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
-.menu a {
-  background-color:#e5e5e5;
-  padding:8px;
-  margin-top:7px;
-  display:block;
-  width:100%;
-  color:black;
+
+li {
+  float: left;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 .main {
   float:left;
-  width:50%;
+  width:70%;
   padding:0 20px;
 }
 .right {
-  background-color:#e5e5e5;
+  background-color:rgb(120, 120, 120);
   float:left;
-  width:20%;
+  width:30%;
   padding:15px;
   margin-top:7px;
   text-align:center;
@@ -35,7 +72,7 @@
 
 @media only screen and (max-width:800px) {
   /* For mobile phones: */
-  .menu, .main, .right {
+ .main, .right {
     width:100%;
   }
 }
@@ -43,30 +80,37 @@
 </head>
 <body style="font-family:Verdana;color:#aaaaaa;">
 
-<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
-  <h1>Hello World</h1>
+  <div style="background-color:rgb(0, 255, 255);padding:45px;text-align:center;">
+  <h1>Richard website</h1>
 </div>
 
-<div style="overflow:auto">
-  <div class="menu">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
-  </div>
+  <ul>
+  <li><a href="hw1.html">Home</a></li>
+  <li><a href="ph.html">photo</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">introduction</a>
+    <div class="dropdown-content">
+      <a href="#">family</a>
+      <a href="#">club</a>
+      <a href="#">motto</a>
+    </div>
+  </li>
+</ul>
 
   <div class="main">
-    <h2>Lorum Ipsum</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <h2>welcome to Richard website</h2>
+    <p>This is a first website about me.</p>
   </div>
 
   <div class="right">
-    <h2>About</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+    <h2>About Richard</h2>
+    <p>Brithday 03/26</p>
   </div>
 </div>
 
-<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">© copyright w3schools.com</div>
+<div style="background-color:#e5e5e5;text-align:center;padding:20px;margin-top:10px;">
+<hr>
+© copyright</div>
 
 </body>
 </html>
