--- a/homework1/hw1.html
+++ b/homework1/hw1.html
@@ -59,6 +59,7 @@ li.dropdown {
 .main {
   float:left;
   width:70%;
+  height: 600px;
   padding:0 20px;
 }
 .right {
@@ -66,6 +67,7 @@ li.dropdown {
   float:left;
   width:30%;
   padding:15px;
+  height: 600px;
   margin-top:7px;
   text-align:center;
 }
