--- a/homework1/ph.html
+++ b/homework1/ph.html
@@ -59,6 +59,7 @@ li.dropdown {
 .main {
   float:left;
   width:70%;    
+  height: 600px;
   padding:0 20px;
 }
 .right {
@@ -66,6 +67,7 @@ li.dropdown {
   float:left;
   width:30%;
   padding:15px;
+  height: 600px;
   margin-top:7px;
   text-align:center;
 }
@@ -124,8 +126,37 @@ div.desc {
       <a href="photo/firedance.jpg">
        <img src="photo/firedance.jpg" alt="Cinque Terre" width="600" height="400">    
       </a>
-     <div class="desc">photo of fire dance</div>
+     <div class="desc">火舞照之1</div>
     </div>
+
+    <div class="gallery">
+      <a href="photo/fire2.jpg">
+       <img src="photo/fire2.jpg" alt="Cinque Terre" width="600" height="400">    
+      </a>
+     <div class="desc">火舞照之2</div>
+    </div>
+
+    <div class="gallery">
+      <a href="photo/me.jpg">
+       <img src="photo/me.jpg" alt="Cinque Terre" width="600" height="400">    
+      </a>
+     <div class="desc">個人照一張</div>
+    </div>
+
+     <div class="gallery">
+      <a href="photo/me2.jpg">
+       <img src="photo/me2.jpg" alt="Cinque Terre" width="600" height="400">    
+      </a>
+     <div class="desc">個人照第二張</div>
+    </div>
+
+     <div class="gallery">
+      <a href="photo/rabbit.jpg">
+       <img src="photo/rabbit.jpg" alt="Cinque Terre" width="600" height="400">    
+      </a>
+     <div class="desc">某一家7-11拍到的</div>
+    </div>
+
  </div>
 
   <div class="right">
