--- a/homework1/hw1.html
+++ b/homework1/hw1.html
@@ -92,9 +92,9 @@ li.dropdown {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">introduction</a>
     <div class="dropdown-content">
-      <a href="#">family</a>
-      <a href="#">club</a>
-      <a href="#">motto</a>
+      <a href="family.html">family</a>
+      <a href="club.html">club</a>
+      <a href="motto.html">motto</a>
     </div>
   </li>
 </ul>
@@ -106,6 +106,7 @@ li.dropdown {
 
   <div class="right">
     <h2>About Richard</h2>
+           <img src="photo/aries.jpg" alt="Cinque Terre" width="300" height="200">    
     <p>Brithday 03/26</p>
   </div>
 </div>
