--- a/homework1/ph.html
+++ b/homework1/ph.html
@@ -113,9 +113,9 @@ div.desc {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">introduction</a>
     <div class="dropdown-content">
-      <a href="#">family</a>
-      <a href="#">club</a>
-      <a href="#">motto</a>
+      <a href="family.html">family</a>
+      <a href="club.html">club</a>
+      <a href="motto.html">motto</a>
     </div>
   </li>
 </ul>
@@ -161,6 +161,7 @@ div.desc {
 
   <div class="right">
     <h2>About Richard</h2>
+       <img src="photo/aries.jpg" alt="Cinque Terre" width="300" height="200">    
     <p>Brithday 03/26</p>
   </div>
 </div>
